# Vireon_Sat

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: demo-protocol.md
scripts/: demo_random.py  solve_dimacs.py
src/vireon_sat/: __init__.py  solver.py
tests/: test_energy.py  test_parser.py  test_solve_small.py
